<resources>
    <string name="app_name">Eat Right</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password should have length of 5-10, contain at least one digit, one uppercase letter and lowercase letter</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_again">Passwords should match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="but_to_reg_text"> <u>Not a member ? Register here !</u> </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="prompt_phone">Phone</string>
    <string name="button_to_server_text"> <u>Are you a server ? Click Here !</u> </string>
    <string name="button_to_user_text"> <u>Are you a user ? Click Here !</u> </string>
    <string name="title_activity_home">Home</string>
    <string name="error_unavl_email">This mail address is already in use</string>
    <string name="error_avl_uname">This username already taken</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="user_page_recommendations">Recommendations</string>
    <string name="user_page_histroy">History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_home_title">Welcome</string>
    <string name="user_home_mail">android.studio@android.com</string>
    <string name="consumption_history">Consumption History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Food</string>
    <string name="foods">Foods</string>
    <string name="user_image">User Image</string>
    <string name="allergic_ingredients">Allergic Ingredients</string>
    <string name="search">Search</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="slug">Slug</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="food_image">Food Image</string>
    <string name="rating">Rating</string>
    <string name="allergic_ingredient">Allergic ingredient</string>
    <string name="_4">4</string>
    <string name="last_comment">Last Comment</string>
    <string name="add_food">Add Food</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add">Add Ingredient+</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="search_food">Search Food</string>
    <string name="calorie_range">Calorie Range</string>
    <string name="protein_range">Protein Range</string>
    <string name="fat_range">Fat Range</string>
    <string name="carbonhydrate_range">Carbonhydrate Range</string>
</resources>
