<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bounswegroup2.eatright.FoodPageActivity"
    android:weightSum="1">

<TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_comment"
        android:id="@+id/comment_but"/>
    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/food_name_text"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
</TableRow>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/food_image"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:text="Food Taste"
                    android:layout_width="195dp"
                    android:id="@+id/food_taste_rating_text"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_height="44dp" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/food_taste_ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Indicator" />
                <TableRow android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="Restaurant"
                        android:id="@+id/restBut"/>
                </TableRow>

                <TableRow android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <Button
                        android:text="Tasted It!"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                       android:layout_weight="1"
                        android:id="@+id/tasted_it_button"
                        android:maxLines="1"/>

                    <Button
                        android:text="Ingredients"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ingredients_button"
                        android:textAllCaps="false"
                        android:maxLines="1"/>


                </TableRow>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="Calorie Information"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:id="@+id/calorie_info_text"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:text="Total Calories"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/total_calories_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_weight="1" />
        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/total_calories_result_text"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:text="Carbonhydrate"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/carb_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_weight="1" />
        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carb_result_text"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:text="Fat"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/fat_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_weight="1" />
        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fat_result_text"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:text="Protein"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/protein_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_weight="1" />
        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/protein_result_text"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ingredientForFoodPage"></ListView>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TableRow
               android:layout_height="wrap_content"
               android:layout_width="wrap_content">
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="Comment"
                   android:inputType="textMultiLine"
                   android:ems="10"
                   android:id="@+id/comment_text" />
               <Button
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="SEND"
                   android:id="@+id/save_eval" />
           </TableRow>
           <TableRow android:layout_height="wrap_content"
               android:layout_width="wrap_content">
               <TextView
                   android:text="Rate Us"
                   android:layout_width="wrap_content"
                   android:layout_marginTop="15dp"
                   android:id="@+id/rate_food_taste_text"
                   android:gravity="center"
                   android:layout_weight="1"
                   android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                   android:layout_height="wrap_content" />
               <RatingBar
                   android:layout_gravity="bottom"
                   android:layout_marginLeft="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/rate_food_taste_ratingBar"
                   android:layout_weight="1"
                   android:stepSize="0.5" />
           </TableRow>

       </LinearLayout>
   </LinearLayout>
</LinearLayout>
</ScrollView>